added loading Animation

--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -1,1 +1,16 @@
 @import "tailwindcss";
+
+@keyframes pulse {
+  0% {
+    opacity: 0;
+    transform: scale(0.8);
+  }
+  50% {
+    opacity: 1;
+    transform: scale(1.1);
+  }
+  100% {
+    opacity: 0;
+    transform: scale(0.8);
+  }
+}
